# big_numbers

./: .gitignore  README.md  Task3.md  pyproject.toml  task4.ipynb  task5.ipynb
goroutines/: generate_ints.py  go.mod  main.go  task2.ipynb
scripts/: generate_big_number.py  get_average_temperature.py  get_statistic.py
tests/: get_average_temperature_test.py
utils/: constants.py
