[tool.poetry]
name = "scripts"
version = "0.1.0"
description = "Repository with two scripts: one generates binary with big numbers, second counts max, min and summary of bigs."
authors = ["mohorka"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
tqdm = "^4.65.0"
ipykernel = "^6.23.1"
pyspark = "^3.4.0"
kaggle = "^1.5.13"
matplotlib = "^3.7.1"
pandas = "^2.0.2"
seaborn = "^0.12.2"
scikit-learn = "^1.2.2"
plotly = "^5.15.0"
nbformat = "^5.9.0"
pwlf = "^2.2.1"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.3.0"
flake8 = "^6.0.0"

[tool.poetry.scripts]
generate_big_numbers = "scripts.generate_big_number:main"
get_statistic = "scripts.get_statistic:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
